add_subdirectory(storage)
function(addtest name)
  add_test(
    NAME "test.${name}"
    COMMAND bash ${CMAKE_SOURCE_DIR}/test/run ${name}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
  )
  set_tests_properties(
    "test.${name}"
    PROPERTIES
    ENVIRONMENT "CCACHE=$<TARGET_FILE:ccache>;STORAGE_TEST_HELPER=$<TARGET_FILE:ccache-storage-test>;STORAGE_TEST_CLIENT=$<TARGET_FILE:storage-test-client>;EXIT_IF_SKIPPED=true"
    SKIP_RETURN_CODE 125)
endfunction()

set_property(
  DIRECTORY PROPERTY
  ADDITIONAL_CLEAN_FILES "${CMAKE_BINARY_DIR}/testdir")

addtest(base)
addtest(basedir)
addtest(cache_levels)
addtest(clang_cu)
addtest(clang_cu_alias)
addtest(clang_cu_direct)
addtest(cleanup)
addtest(color_diagnostics)
addtest(config)
addtest(coverage_compilation_dir)
addtest(coverage_prefix_map)
addtest(debug_compilation_dir)
addtest(debug_prefix_map)
addtest(depend)
addtest(direct)
addtest(distributed_thinlto_clang)
addtest(fileclone)
addtest(hardlink)
addtest(inode_cache)
addtest(input_charset)
addtest(ivfsoverlay)
addtest(masquerading)
addtest(modules)
addtest(multi_arch)
addtest(namespace)
addtest(no_compression)
addtest(nvcc)
addtest(nvcc_direct)
addtest(nvcc_ldir)
addtest(pch)
addtest(profiling)
addtest(profiling_clang)
addtest(profiling_gcc)
addtest(profiling_gcc_10+)
addtest(profiling_hip_clang)
addtest(readonly)
addtest(readonly_direct)
addtest(remote_file)
addtest(remote_helper)
if(HTTP_STORAGE_BACKEND)
  addtest(remote_http)
endif()
addtest(remote_only)
addtest(remote_redis)
addtest(remote_redis_unix)
addtest(remote_url)
addtest(sanitize_ignorelist)
addtest(sarif)
addtest(serialize_diagnostics)
addtest(source_date_epoch)
addtest(split_dwarf)
addtest(stats_log)
addtest(trim_dir)
addtest(upgrade)
